# serializer version: 1
# name: test_add_application
  b'{"applications":["harp_apps.storage"],"storage":{}}'
# ---
# name: test_add_application.1
  dict({
    'applications': list([
      'harp_apps.storage',
      'foo.bar',
    ]),
    'storage': dict({
    }),
  })
# ---
# name: test_add_application.2
  b'{"applications":["harp_apps.storage","foo.bar"],"storage":{}}'
# ---
